--- a/trunk/ICE-T/pom.xml
+++ b/trunk/ICE-T/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.1.7.Final</version>
+			<version>4.1.7.FINAL</version>
 		</dependency>
         
         <!-- Hibernate Annotations -->
@@ -81,20 +81,14 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.1.7.Final</version>
+			<version>4.1.7.FINAL</version>
 		</dependency>
 		
 		<!-- HSQLDB -->
 		<dependency>
-			<groupId>hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
-		</dependency>
-		
-		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.2.8</version>
+			<version>2.2.9</version>
 		</dependency>
             
 	</dependencies>
