--- a/trunk/ICE-T/pom.xml
+++ b/trunk/ICE-T/pom.xml
@@ -90,7 +90,8 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.2.9</version>
 		</dependency>
-            
-	</dependencies>
+
+		<!-- Apache Pivot -->
+   	</dependencies>
        
 </project>
