--- a/ICE-T/pom.xml
+++ b/ICE-T/pom.xml
@@ -9,6 +9,28 @@
 	<properties>
    		<org.springframework.version>3.1.2.RELEASE</org.springframework.version>
 	</properties>
+	
+	
+	<!-- Filtering resources -->
+	<build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <filters>
+			<filter>src/main/filters/local.properties</filter>
+		</filters>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+			</plugin>
+		</plugins>		
+    </build>
+   
    
    	<dependencies>
  
