--- a/trunk/ICE-T/src/main/resources/filters/mainGUI_l11n/EntityTypeName.properties
+++ b/trunk/ICE-T/src/main/resources/filters/mainGUI_l11n/EntityTypeName.properties
@@ -3,3 +3,4 @@ Monster_entity = Monster
 Team_entity = Team
 Effect_entity = Effect
 TrapHazard_entity = Trap/Hazard
+CombatEncounter_entity = Combat Encounter
