--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/RootWindow.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/RootWindow.properties
@@ -1,6 +1,8 @@
-App_Title = Interactive Combat Encounter Tool
-Home_Tab = HOME
-New_Tab = NEW
-Edit_Tab = EDIT
-Combat_Tab = COMBAT
-Help_Tab = HELP
+App_title = Interactive Combat Encounter Tool
+File_menu = File
+Preferences_menuitem = Preferences
+Save_menuitem = Save
+Help_menuitem = Help
+Quit_menuitem = Quit
+New_menu = New
+Edit_menu = Edit
