--- a/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -1,4 +1,5 @@
 Name_entity = Name:
+PlayerName_entity = Player:
 XP_entity = XP:
 Zero_warning = Must be integer greater than zero.
 LVL_entity = Level:
@@ -15,7 +16,7 @@ Brute_role = Brute
 Lurker_role = Lurker
 Skirmisher_role = Skirmisher
 Soldier_role = Soldier
-Size_entity = Size
+Size_entity = Size:
 Tiny_size = Tiny
 Small_size = Small
 Medium_size = Medium
@@ -23,7 +24,7 @@ Large_size = Large
 Huge_size = Huge
 Gargantuan_size = Gargantuan
 Power_entity = Power Source:
-Ability_title = Ability Scores
+Ability_title = Abilities
 STR_entity = STR:
 CON_entity = CON:
 INT_entity = INT:
@@ -60,3 +61,17 @@ SurgeNum_entity = Surges/Day:
 RaceF_entity = Race Features:
 Lang_entity = Languages:
 Misc_entity = Miscellaneous:
+ResistValue_entity = Resistance Value:
+ResistType_entity = Resistance Type:
+Acid_resist = Acid
+Cold_resist = Cold
+Fire_resist = Fire
+Force_resist = Force
+Lightning_resist = Lightning
+Necrotic_resist = Necrotic
+Poison_resist = Poison
+Psychic_resist = Psychic
+Radiant_resist = Radiant
+Thunder_resist = Thunder
+Add_button = +
+Remove_button = -
