Further completed beans and made fixes to the code I've authored I made entity.Attack_Type NON-abstract!

--- a/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -75,3 +75,49 @@ Radiant_resist = Radiant
 Thunder_resist = Thunder
 Add_button = +
 Remove_button = -
+Name_attack = Attack Name:
+Primary_attack = Primary Target:
+Secondary_attack = Secondary Target:
+Accessories_attack = Accessories:
+Effect_attack = Attack Effect:
+Charm_attack = Charm
+Conjuration_attak = Conjuration
+Fear_attack = Fear
+Healing_attack = Healing
+Illusion_attack = illusion
+Poison_attack = Poison
+Polymorph_attack = Polymorph
+Reliable_attack = Reliable
+Sleep_attack = Sleep
+Stance_attack = Stance
+Teleportation_attack = Teleportation
+Zone_attack = Zone
+None_attack = NONE
+Damage_attack = Attack Damage:
+Ability_attack = Ability:
+STR_attack = Strength
+CON_attack = Constitution
+DEX_attack = Dexterity
+INT_attack = Intelligence
+WIS_attack = Wisdom
+CHA_attack = Charisma
+Defense_attack = Defence:
+AC_attack = Armour Class
+REF_attack = Reflex
+FORT_attack = Fortitude
+WILL_attack = Will
+Hit_attack = Hit (damage dice):
+Miss_attack = Miss:
+Action_attack = Action:
+Sustain_attack = Sustain:
+Standard_attack = Standard
+Move_attack = Move
+Minor_attack = Minor
+Free_attack = Free
+Basic_attack = Basic Attack:
+Use_attack = Use:
+AtWill_attack = At Will
+Encounter_attack = Encounter
+Daily_attack = Daily
+Recharge_attack = Recharge
+Trigger_attack = Trigger:
