--- a/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -81,7 +81,7 @@ Secondary_attack = Secondary Target:
 Accessories_attack = Accessories:
 Effect_attack = Attack Effect:
 Charm_attack = Charm
-Conjuration_attak = Conjuration
+Conjuration_attack = Conjuration
 Fear_attack = Fear
 Healing_attack = Healing
 Illusion_attack = illusion
@@ -121,3 +121,20 @@ Encounter_attack = Encounter
 Daily_attack = Daily
 Recharge_attack = Recharge
 Trigger_attack = Trigger:
+Short_range = Short Range:
+Long_range = Long Range:
+Reach_melee = Reach:
+Range_area = Area Range:
+Size_area = Area Size:
+Type_area = Area Type:
+Burst_area = Burst
+Wall_area = Wall
+Size_close = Close Value:
+Type_close = Close Type:
+Blast_close = Blast
+Burst_close = Burst
+Area_attack = Area
+Close_attack = Close
+Melee_attack = Melee
+Personal_attack = Personal
+Ranged_attack = Ranged
