--- a/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -138,3 +138,5 @@ Close_attack = Close
 Melee_attack = Melee
 Personal_attack = Personal
 Ranged_attack = Ranged
+Next_button = Next
+Back_button = Back
