Finished TrapHazardForm, wrote Default constructor for entity.TrapHazard and added an association with attack to entity.TrapHazard

--- a/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -140,3 +140,38 @@ Personal_attack = Personal
 Ranged_attack = Ranged
 Next_button = Next
 Back_button = Back
+Blaster_trap = Blaster
+Lurker_trap = Lurker
+Obstacle_trap = Obstacle
+Warder_trap = Warder
+Solo_trap = Solo
+Elite_trap = Elite
+Trap_trap = Trap
+Hazard_trap = Hazard
+ACRO_trap = Acrobatics
+ATHL_trap = Athletics
+ARCA_trap = Arcana
+BLUF_trap = Bluff
+DIPL_trap = Diplomacy
+DUNG_trap = Dungeoneering
+ENDU_trap = Endurance
+HEAL_trap = Heal
+HIST_trap = History
+INSI_trap = Insight
+INTI_trap = Intimidate
+NATU_trap = Nature
+PERC_trap = Perception
+RELI_trap = Religion
+STEA_trap = Stealth
+STRE_trap = Streetwise
+THIE_trap = Theivery
+Name_trap = Trap Name:
+Level_trap = Trap Level:
+Role_trap = Trap Role:
+Type_trap = Trap Type:
+AvoidSkill_trap = Avoid Skill:
+AvoidValue_trap = Avoid Value:
+CounterSkill_trap = Countermeasure Skill:
+CounterDifficulty_trap = CounterMeasure Difficulty:
+CounterText_trap = Countermeasure Info:
+Trigger_trap = Trap Triggers:
