--- a/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -175,3 +175,14 @@ CounterSkill_trap = Countermeasure Skill:
 CounterDifficulty_trap = CounterMeasure Difficulty:
 CounterText_trap = Countermeasure Info:
 Trigger_trap = Trap Triggers:
+MonsterOrigin_label = Monster Origin
+Aberrant_origin = Aberrant
+Elemental_origin = Elemental
+Fey_origin = Fey
+Immortal_origin = Immortal
+Shadow_origin = Shadow
+MonsterType_label = Monster Type
+Animate_monster = Animate
+Beast_monster = Beast
+Humanoid_monster = Humanoid
+MagicalBeast_monster = Magical Beast
