--- a/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -186,3 +186,11 @@ Animate_monster = Animate
 Beast_monster = Beast
 Humanoid_monster = Humanoid
 MagicalBeast_monster = Magical Beast
+Duration_effect = Duration of Effect:
+StartOfAppliersTurn_effect = Start of the applying creatures turn
+EndOfAppliersTurn_effect = End of the applying creatures turn
+EndOfEncounter_effect = End of the encounter
+SaveEnds_effect = Save Ends
+Name_effect = Effect Name:
+Metrics_effect = Metrics:
+Damage_effect = Associated Damage:
