--- a/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -194,3 +194,8 @@ SaveEnds_effect = Save Ends
 Name_effect = Effect Name:
 Metrics_effect = Metrics:
 Damage_effect = Associated Damage:
+tempHP_creature = Temp. HP:
+Initiative_creature = Initiative:
+HP_creature = Current HP:
+Surge_creature = Surges Left:
+SecondWind_creature = Second Wind Used:
