In Hibernate-Core and Hibernate-EntityManager changed 4.1.7.FINAL to 4.1.7.Final

--- a/ICE-T/pom.xml
+++ b/ICE-T/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.1.7.FINAL</version>
+			<version>4.1.7.Final</version>
 		</dependency>
         
         <!-- Hibernate Annotations -->
@@ -103,7 +103,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.1.7.FINAL</version>
+			<version>4.1.7.Final</version>
 		</dependency>
 		
 		<!-- HSQLDB -->
