--- a/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -53,7 +53,7 @@ PERC_entity = Perception:
 RELI_entity = Religion:
 STEA_entity = Stealth:
 STRE_entity = Streetwise:
-THIE_entity = Theivery:
+THIE_entity = Thievery:
 MAXHP_entity = Max HP:
 Bloodied_entity = Bloodied:
 SurgeValue_entity = Surge Value:
@@ -84,7 +84,7 @@ Charm_attack = Charm
 Conjuration_attack = Conjuration
 Fear_attack = Fear
 Healing_attack = Healing
-Illusion_attack = illusion
+Illusion_attack = Illusion
 Poison_attack = Poison
 Polymorph_attack = Polymorph
 Reliable_attack = Reliable
@@ -101,7 +101,7 @@ DEX_attack = Dexterity
 INT_attack = Intelligence
 WIS_attack = Wisdom
 CHA_attack = Charisma
-Defense_attack = Defence:
+Defense_attack = Defense:
 AC_attack = Armour Class
 REF_attack = Reflex
 FORT_attack = Fortitude
