--- a/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -199,3 +199,4 @@ Initiative_creature = Initiative:
 HP_creature = Current HP:
 Surge_creature = Surges Left:
 SecondWind_creature = Second Wind Used:
+Attack_attack = Attack:
