--- a/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -200,3 +200,9 @@ HP_creature = Current HP:
 Surge_creature = Surges Left:
 SecondWind_creature = Second Wind Used:
 Attack_attack = Attack:
+## Add to FRENCH ##
+Next_team = Next
+Prev_team = Previous
+Options_title = Options
+CreatureDisplay_label = Display Creatures
+TrapDisplay_label = Display Traps
