--- a/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -204,5 +204,6 @@ Attack_attack = Attack:
 Next_team = Next
 Prev_team = Previous
 Options_title = Options
+NPCOnly_label = NPC only:
 CreatureDisplay_label = Display Creatures
 TrapDisplay_label = Display Traps
