--- a/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -207,3 +207,4 @@ Options_title = Options
 NPCOnly_label = NPC only:
 CreatureDisplay_label = Display Creatures
 TrapDisplay_label = Display Traps
+CurrentHP_entity = HP:
