--- a/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/RootWindow.properties
+++ b/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/RootWindow.properties
@@ -6,3 +6,6 @@ Help_menuitem = Help
 Quit_menuitem = Quit
 New_menu = New
 Edit_menu = Edit
+## Add to French ##
+SaveCE_message = Give the Combat Encounter a name:
+SaveCE_title = Save Combat Encounter
