--- a/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
+++ b/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
@@ -11,3 +11,5 @@ TupleColSucc_Title = Successes
 TupleColFail_Title = Failures
 Cancel_button = Cancel
 AddTuple_Button = +
+## Add to French ##
+RemoveTuple_Button = -
