--- a/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
+++ b/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
@@ -12,3 +12,4 @@ TupleColFail_Title = Failures
 Cancel_button = Cancel
 AddTuple_Button = +
 RemoveTuple_Button = -
+Effect_Warning = You must select at least one creature.
