Can now: organize by initiative, finish creatures turn, add/remove effects, adding a team to a combat encounter will now reset the creatures in that teams health, initiative, etc... Changed: various layout options, especially attackBean.

--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
@@ -12,3 +12,4 @@ TupleColFail_Title = Failures
 Cancel_button = Cancel
 AddTuple_Button = +
 RemoveTuple_Button = -
+Effect_Warning = You must select at least one creature.
