Various bug fixes and now able to remove a combat encounter that is not open.

--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
@@ -13,3 +13,5 @@ Cancel_button = Cancel
 AddTuple_Button = +
 RemoveTuple_Button = -
 Effect_Warning = You must select at least one creature.
+##Add To French##
+GRE_Button = Generate Random Encounter
