Implemented GRE requirement. Bug Fixes

--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
@@ -12,6 +12,8 @@ TupleColFail_Title = Failures
 Cancel_button = Cancel
 AddTuple_Button = +
 RemoveTuple_Button = -
-Effect_Warning = You must select at least one creature.
-##Add To French##
+Effect_Warning = You must select at least one creature
 GRE_Button = Generate Random Encounter
+## Add To French ##
+ReRoll_Button = Re-Roll
+Options_Title = Options
