--- a/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
+++ b/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity.properties
@@ -207,3 +207,5 @@ NPCOnly_label = NPC only:
 CreatureDisplay_label = Display Creatures
 TrapDisplay_label = Display Traps
 CurrentHP_entity = HP:
+## Add to French ##
+Avoidance_trap = Avoidance
