--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab.properties
@@ -16,3 +16,4 @@ Effect_Warning = You must select at least one creature
 GRE_Button = Generate Random Encounter
 ReRoll_Button = Re-Roll
 Options_Title = Options
+GRE_Warning = There must be at least one player in the combat encounter.
